--- a/index.Rmd
+++ b/index.Rmd
@@ -4,4 +4,15 @@ title: "Sleepyteens"
 
 Since 2014, the #sleepyteens project at the University of Glasgow has been dedicated to looking beyond the headlines to present the evidence on adolescent social media use and sleep.
 
-Heather Cleland Woods is a Senior LEcturer in the School of Psychology. Blurb blrub
+<img src="images/heatherpic.jpg" style="width: 200px; float: left;">
+
+Dr Heather Cleland Woods is a Senior Lecturer in the School of Psychology. Blurb blurb
+
+<div style="clear: both;"></div>
+
+---
+
+<img src="images/hollypic.jpg" style="width: 200px; float: left;">
+
+Dr Holly Scott is a Lecturer in the School of Psychology. Blurb blurb
+
