--- a/index.Rmd
+++ b/index.Rmd
@@ -6,16 +6,16 @@ Since 2014, the #sleepyteens project at the University of Glasgow has been dedic
 
 ---
 
-<img src="images/heatherpic.jpg" style="width: 200px; float: left;">
+<img src="images/heatherpic.jpg" style="width: 200px; float: left; padding: 0px 15px 0px 0px;">
 
-Dr Heather Cleland Woods is a Senior Lecturer in the School of Psychology. Blurb blurb
+Dr Heather Cleland Woods is a Senior Lecturer in the School of Psychology. Blurb
 
 <div style="clear: both;"></div>
 
 ---
 
-<img src="images/hollypic.jpg" style="width: 200px; float: left;">
+<img src="images/hollypic.jpg" style="width: 200px; float: left; padding: 0px 15px 0px 0px;">
 
-Dr Holly Scott is a Lecturer in the School of Psychology. Blurb blurb
+Dr Holly Scott is a Lecturer in the School of Psychology. Her PhD examined the cognitive and emotional factors that can make it difficult for young people to disengage from social media at bedtime. She is interested in how schools can support pupil wellbeing through research partnerships.
 
 ---
