--- a/publications.Rmd
+++ b/publications.Rmd
@@ -2,6 +2,8 @@
 title: "Publications"
 ---
 
+## Academic journal articles
+
 Scott, H., Biello, S. M., & Woods, H. C. (2021). Nodding off but can't disconnect: development and validation of the iNOD index of Nighttime Offline Distress. *Sleep Medicine*. [https://doi.org/10.1016/j.sleep.2021.02.045](https://doi.org/10.1016/j.sleep.2021.02.045)
 
 Scott, H., Biello, S. M., & Woods, H. C. (2019). Social media use and adolescent sleep patterns: cross-sectional findings from the UK millennium cohort study. *BMJ Open, 9*, e031161. [https://doi.org/10.1136/bmjopen-2019-031161](https://bmjopen.bmj.com/content/9/9/e031161.info)
@@ -10,8 +12,14 @@ Scott, H., Biello, S. M., & Woods, H. C. (2019). Identifying drivers for bedtime
 
 Scott, H., & Woods, H. C. (2019). Understanding Links Between Social Media Use, Sleep and Mental Health: Recent Progress and Current Challenges. *Current Sleep Medicine Reports, 5*, 141-149. [https://doi.org/10.1007/s40675-019-00148-9](https://doi.org/10.1007/s40675-019-00148-9)
 
-Woods, H.C., & Scott, H. (2019). Merging the Biological and Cognitive Processes of Sleep and Screens. *Current Sleep Medicine Repports, 5*, 150-155. [https://doi.org/10.1007/s40675-019-00149-8](https://doi.org/10.1007/s40675-019-00149-8)
+Woods, H.C., & Scott, H. (2019). Merging the Biological and Cognitive Processes of Sleep and Screens. *Current Sleep Medicine Reports, 5*, 150-155. [https://doi.org/10.1007/s40675-019-00149-8](https://doi.org/10.1007/s40675-019-00149-8)
 
 Scott, H., & Woods, H. C. (2018). Fear of missing out and sleep: Cognitive behavioural factors in adolescents' nighttime social media use. *Journal of Adolescence, 68*, 61-65. [https://doi.org/10.1016/j.adolescence.2018.07.009](https://doi.org/10.1016/j.adolescence.2018.07.009)
 
 Woods, H. C., & Scott, H. (2016). #Sleepyteens: Social media use in adolescence is associated with poor sleep quality, anxiety, depression and low self-esteem. *Journal of Adolescence, 51*, 41-49. [https://doi.org/10.1016/j.adolescence.2016.05.008](https://doi.org/10.1016/j.adolescence.2016.05.008)
+
+## Interest pieces
+
+How to help teens with sleep and social media use. Times Education Supplement. [https://www.tes.com/news/how-help-teens-sleep-and-social-media-use](https://www.tes.com/news/how-help-teens-sleep-and-social-media-use)
+
+Limiting screen use is not the way to tackle teenage sleep problems - here's how to browse healthily at night. The Conversation. [https://theconversation.com/limiting-screen-use-is-not-the-way-to-tackle-teenage-sleep-problems-heres-how-to-browse-healthily-at-night-117527](https://theconversation.com/limiting-screen-use-is-not-the-way-to-tackle-teenage-sleep-problems-heres-how-to-browse-healthily-at-night-117527)
