updated events page with link

--- a/events.Rmd
+++ b/events.Rmd
@@ -2,6 +2,6 @@
 title: "Events"
 ---
 
-## Glasgow City Parents Group, April 2021
+## [Glasgow City Parents Group, April 2021](https://gla-my.sharepoint.com/:b:/g/personal/holly_scott_glasgow_ac_uk/Eb-prJ0OMqBFkvV0sGa2Mi0BJKHAmU6p62_hkYcor6KTCg?e=XXyd0J)
 
-[![](images/GlasgowParentsImage.jpg)](https://gla-my.sharepoint.com/:b:/g/personal/holly_scott_glasgow_ac_uk/Eb-prJ0OMqBFkvV0sGa2Mi0BJKHAmU6p62_hkYcor6KTCg?e=XXyd0J)
+![](images/GlasgowParentsImage.jpg)
